# Manualmapdetector

./: CMakeLists.txt  Makefile  build.bat  manualmapdetector.cpp
.github/workflows/: Build - release.yml  Build.yml  build.yml  main.yml
